<resources>
    <string name="app_name">MatchCards</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_message">欢迎来到MatchCards!\n请从左侧导航栏选择功能</string>
    <string name="game_section">游戏空间</string>
    <string name="friend_section">我的好友</string>
    <string name="group_section">我的群组</string>
    <string name="chat_section">群组聊天</string>
    <string name="action_logout">注销</string>
    <string name="login_hint">用户登录</string>
    <string name="action_login">登录</string>
    <string name="action_register">注册</string>
    <string name="register_hint">注册新用户</string>
    <string name="input_username">用户名：</string>
    <string name="input_password">密码：</string>
    <string name="input_password2">确认密码：</string>
    <string name="register_success">注册成功</string>
    <string name="send_success">发送成功</string>
    <string name="error_name_used">该用户名已被注册</string>
    <string name="error_diffrent_password">两次密码不一致</string>
    <string name="error_empty">用户名密码不能为空</string>
    <string name="error_message_empty">用户名或消息为空</string>
    <string name="action_confirm">确定</string>
    <string name="action_cancel">取消</string>
    <string name="username_hint">输入用户名</string>
    <string name="groupname_hint">输入群组名</string>
    <string name="password_hint">输入密码</string>
    <string name="message_hint">输入消息</string>
    <string name="send_message">发送消息</string>
    <string name="action_send">发送</string>
    <string name="received_message">我收到的消息</string>
    <string name="no_new_message">暂无新消息</string>
    <string name="game_chance">剩余游戏次数:%1$d</string>
    <string name="high_score">我的最高分:%1$d</string>
    <string name="game_start">开始游戏</string>
    <string name="upload_game">上传游戏结果</string>
    <string name="game_score">分数:%1$d</string>
    <string name="game_level">等级:%1$d　限时:%2$d秒</string>
    <string name="share_text">我刚在Match Cards中得了%1$d分，你也来试试吧。</string>
    <string name="action_add_friend">添加好友</string>
    <string name="action_give_chance">赠送机会</string>
    <string name="friend_name_hint">输入好友名</string>
    <string name="action_create_group">创建群组</string>
    <string name="action_join_group">加入群组</string>
    <string name="action_enter_chat">进入聊天</string>
    <string name="action_send_words">发送</string>
    <string name="group_not_exist">不存在该群组！</string>
    <string name="group_already_exist">已存在该群组！</string>
    <string name="alert_play_time">您已连续游戏超过%1$d小时，请注意健康！</string>
    <string name="action_settings">设置</string>
</resources>
