<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/send_message"
        android:id="@+id/send_message_hint"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/username_hint"
        android:ems="10"
        android:id="@+id/send_message_username"
        android:layout_below="@id/send_message_hint"
        android:layout_alignLeft="@id/send_message_hint"
        android:layout_alignStart="@id/send_message_hint"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/message_hint"
        android:ems="10"
        android:id="@+id/send_message_content"
        android:layout_below="@+id/send_message_username"
        android:layout_alignLeft="@id/send_message_username"
        android:layout_alignStart="@id/send_message_username"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_send"
        android:id="@+id/send_button"
        android:layout_below="@+id/send_message_content"
        android:layout_alignRight="@id/send_message_content"
        android:layout_alignEnd="@id/send_message_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/received_message"
        android:id="@+id/received_message_hint"
        android:layout_below="@id/send_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/no_new_message"
        android:id="@+id/oldMessage"
        android:layout_below="@id/received_message_hint"
        android:layout_alignLeft="@id/received_message_hint"
        android:layout_alignStart="@id/received_message_hint"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:layout_alignRight="@+id/send_button"
        android:layout_alignEnd="@+id/send_button" />

</RelativeLayout>
