<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fdusoft.matchcards.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_start"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/game_chance_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_chance"
        android:layout_above="@+id/start_game"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp" />

    <TextView
        android:id="@+id/high_score_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_score"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/game_chance_hint"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>
