<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fdusoft.matchcards.MainActivity$PlaceholderFragment" >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/add_friend_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/add_friend_button"
        android:layout_toStartOf="@+id/add_friend_button"
        android:hint="@string/username_hint"
        android:layout_alignRight="@+id/give_chance_text"
        android:layout_alignEnd="@+id/give_chance_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add_friend"
        android:id="@+id/add_friend_button"
        android:layout_alignBottom="@+id/add_friend_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/give_chance_text"
        android:hint="@string/friend_name_hint"
        android:layout_below="@+id/add_friend_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/give_chance_button"
        android:layout_toStartOf="@+id/give_chance_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_give_chance"
        android:id="@+id/give_chance_button"
        android:layout_below="@+id/add_friend_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/give_chance_text" />

    <TextView
        android:id="@+id/my_friend_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/friend_section"
        android:layout_below="@id/give_chance_text"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/friend_list"
        android:layout_below="@+id/my_friend_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/add_friend_button"
        android:layout_alignEnd="@+id/add_friend_button"
        android:layout_marginTop="10dp"/>

</RelativeLayout>
