<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView android:text="@string/register_hint" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/register_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_username"
        android:id="@+id/register_username"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/register_title"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/eusername"
        android:layout_alignTop="@id/register_username"
        android:layout_toRightOf="@id/register_username"
        android:layout_toEndOf="@id/register_username"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_password"
        android:id="@+id/register_password"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_below="@id/register_username"
        android:layout_alignRight="@+id/register_username"
        android:layout_alignEnd="@id/register_username"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/epassword"
        android:layout_alignTop="@id/register_password"
        android:layout_toRightOf="@id/register_password"
        android:layout_toEndOf="@id/register_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_password2"
        android:id="@+id/register_password2"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_below="@id/register_password"
        android:layout_alignRight="@+id/register_password"
        android:layout_alignEnd="@+id/register_password"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/epassword2"
        android:layout_alignTop="@id/register_password2"
        android:layout_toRightOf="@+id/register_password2"
        android:layout_toEndOf="@+id/register_password2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:id="@+id/button"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/epassword2"
        android:layout_centerHorizontal="true" />
</RelativeLayout>