<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fdusoft.matchcards.MainActivity$PlaceholderFragment" >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/join_group_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/join_group_button"
        android:hint="@string/groupname_hint"
        android:layout_alignRight="@+id/create_group_text"
        android:layout_alignEnd="@+id/create_group_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_join_group"
        android:id="@+id/join_group_button"
        android:layout_alignBottom="@+id/join_group_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/create_group_text"
        android:hint="@string/groupname_hint"
        android:layout_below="@+id/join_group_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/join_group_button"
        android:layout_toStartOf="@+id/join_group_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_create_group"
        android:id="@+id/create_group_button"
        android:layout_below="@+id/join_group_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/create_group_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/group_section"
        android:id="@+id/my_group_title"
        android:layout_below="@+id/create_group_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <ExpandableListView android:id="@+id/group_list"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_below="@id/my_group_title"
        android:layout_marginTop="10dp" />

</RelativeLayout>
